Prevents long titles from overflowing in the queue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -206,7 +206,7 @@ fieldset {
 	border-bottom-color: white;
 	box-shadow: inset 1px 1px white;
 	margin: 10px 0;
-	padding: 0 12px 6px 12px;
+	padding: 1px 12px 6px 12px;
 }
 
 legend {
@@ -261,7 +261,6 @@ legend {
 }
 
 .bucket li {
-	height: 21px;
 	line-height: 21px;
 }
 
